methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:4: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
     if(isFacingTrail()){
                     ^